--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
        </tr> 
      </table>
      <br>
-     <video src="ülkücü kurt.mp4" autoplay loop muted width="500" height="500">
-      <source src="ülkücü kurt.mp4">
-      <source src="ülkücü kurt.WebM">    
+     <video src="https://cdn.discordapp.com/attachments/921436247132631071/934374748396339271/ulkucu_kurt.mp4" autoplay loop muted width="500" height="500">
+      <source src="https://cdn.discordapp.com/attachments/921436247132631071/934374748396339271/ulkucu_kurt.mp4">
      </video>
      <br>
      <hr>
