--- a/index2.html
+++ b/index2.html
@@ -8,18 +8,16 @@
      <h1><i>Er-razi'ye Tıkladığın İçin Adam Sinirlendi.</i></h1>
      <h2><mark>Şimdi</mark> Seni <b>Ham</b> Yapacak</h2>
      <a href="index3.html" target="_blank" >
-     <img src="timthumb.jpg" alt="Shrexy" height="300" width="600" title="Shrek">
+     <img src="https://cdn.discordapp.com/attachments/921436247132631071/934374748119506954/timthumb.jpg" alt="Shrexy" height="300" width="600" title="Shrek">
      </a> 
      <br>
      <br>
-     <video src="tc.karamizaj-20210421-0001.mp4" controls loop autoplay muted width="300">
-       <source src="tc.karamizaj-20210421-0001.mp4">
-       <source src="tc.karamizaj-20210421-0001.WebM">
+     <video src="https://cdn.discordapp.com/attachments/921436247132631071/934374747821727795/tc.karamizaj-20210421-0001.mp4" controls loop autoplay muted width="300">
+       <source src="https://cdn.discordapp.com/attachments/921436247132631071/934374747821727795/tc.karamizaj-20210421-0001.mp4">
      </video> 
      <br> 
-     <audio controls loop autoplay>
-       <source src="Rick-Astley-Never-Gonna-Give-You-Up-_Official-Music-Video_.mp3"> 
-       <source src="Rick-Astley-Never-Gonna-Give-You-Up-_Official-Music-Video_.wav">  
+     <audio src="https://cdn.discordapp.com/attachments/921436247132631071/934374747083538472/Rick-Astley-Never-Gonna-Give-You-Up-_Official-Music-Video_.mp3" controls loop autoplay>
+       <source src="https://cdn.discordapp.com/attachments/921436247132631071/934374747083538472/Rick-Astley-Never-Gonna-Give-You-Up-_Official-Music-Video_.mp3"> 
      </audio>  
 </body>
 </html>
